fixed 'index out of bounds' erroe in updateStudent method